--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -108,30 +108,12 @@
                   </div>
                   <div class="d-flex col flex-column">
                     <div class="flex-grow-1 position-relative">
-                      <div id="map">
-                        <div id="tooltip" class="tooltip"></div>
-                        <div class="w-100" style="position: absolute; z-index: 1;">
-                          <div class="w-100 d-flex justify-content-center pt-3">
-                            <div class="w-100 d-flex justify-content-center">
-                              <div class="d-flex bg-dark rounded rounded-lg px-4 py-2" style="gap: 10px">
-                                <a href="#" class="btn rounded-pill btn-outline-success py-1 shadow border-green">
-                                  <span class="ion ion-md-checkmark"></span>
-                                  <b class="mx-2">NDVI</b>
-                                </a>
-                              </div>
-                            </div>
-
-                            <!-- <div id="drawFieldOnMapToolsContainer" class="bg-white border rounded p-2">
-                              <button type="button" class="btn btn-outline-primary" onclick="editToolClick();">
-                                <span class="fas fa-pencil-alt text-large"></span>
-                              </button>
-                              <button type="button" class="btn btn-outline-danger" disabled>
-                                <span class="fas fa-times-circle text-large"></span>
-                              </button>
-                              <button type="button" class="btn btn-outline-success" disabled>
-                                <span class="fas fa-save text-large"></span>
-                              </button>
-                            </div> -->
+                      <div class="w-100 h-100">
+                        <div id="map"></div>
+                        <div id="editFieldGeometryTools" class="mb-3" style="position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); display: none;">
+                          <div class="rounded-pill bg-dark text-center text-white d-flex flex-row p-3">
+                            <button id="cancelFieldGeometry" class="btn rounded-pill btn-secondary px-5">Cancelar</button>
+                            <button id="saveFieldGeometry" class="btn rounded-pill btn-success px-5">Guardar</button>
                           </div>
                         </div>
                       </div>
@@ -143,108 +125,108 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="modal fade" id="saveFieldModal" data-backdrop="static">
-    <div class="modal-dialog">
-      <form id="fieldForm" class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Guardar lote</h5>
+      <div class="modal fade" id="saveFieldModal" data-backdrop="static">
+        <div class="modal-dialog">
+          <form id="fieldForm" class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Guardar lote</h5>
+            </div>
+            <div class="modal-body">
+              <div class="form-row">
+                <div class="form-group col">
+                  <label class="form-label">Nombre del lote *</label>
+                  <input id="fieldName" type="text" class="form-control" maxlength="80"
+                    placeholder="Escribe el nombre del lote" autocomplete="off" required>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col">
+                  <label class="form-label">Cultivo</label>
+                  <select id="fieldCrop" class="form-control" style="width: 100%" data-allow-clear="true">
+                    <option></option>
+                    <option value="0">Alfalfa</option>
+                    <option value="1">Maíz</option>
+                    <option value="2">Otro</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-row mb-2">
+                <div class="form-group col">
+                  <label class="form-label">Fecha de siembra</label>
+                  <input id="fieldPlantingDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
+                    autocomplete="off">
+                </div>
+                <div class="form-group col">
+                  <label class="form-label">Fecha de cosecha</label>
+                  <input id="fieldHarvestDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
+                    autocomplete="off">
+                </div>
+              </div>
+              <hr class="mb-0">
+              <div class="text-center mb-3" style="margin-top: -11px;">
+                <b class="bg-white px-2">Borde del lote</b>
+              </div>
+              <div class="form-row">
+                <div class="form-group col">
+                  <label class="form-label" for="fieldBorderColor">Color de borde *</label>
+                  <input id="fieldBorderColor" type="text" class="form-control" value="#000000" autocomplete="off"
+                    required>
+                </div>
+                <div class="form-group col">
+                  <label class="form-label">Ancho de borde *</label>
+                  <input id="fieldBorderSize" type="number" class="form-control" min="1" max="10" autocomplete="off"
+                    required>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button id="fmsCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+              <button id="fmsSaveBtn" type="submit" class="btn btn-success">
+                Guardar lote
+              </button>
+            </div>
+          </form>
         </div>
-        <div class="modal-body">
-          <div class="form-row">
-            <div class="form-group col">
-              <label class="form-label">Nombre del lote *</label>
-              <input id="fieldName" type="text" class="form-control" maxlength="80"
-                placeholder="Escribe el nombre del lote" autocomplete="off" required>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col">
-              <label class="form-label">Cultivo</label>
-              <select id="fieldCrop" class="form-control" style="width: 100%" data-allow-clear="true">
-                <option></option>
-                <option value="0">Alfalfa</option>
-                <option value="1">Maíz</option>
-                <option value="2">Otro</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row mb-2">
-            <div class="form-group col">
-              <label class="form-label">Fecha de siembra</label>
-              <input id="fieldPlantingDate" type="text" class="form-control" placeholder="dd/MM/yyyy"
-                autocomplete="off">
-            </div>
-            <div class="form-group col">
-              <label class="form-label">Fecha de cosecha</label>
-              <input id="fieldHarvestDate" type="text" class="form-control" placeholder="dd/MM/yyyy" autocomplete="off">
-            </div>
-          </div>
-          <hr class="mb-0">
-          <div class="text-center mb-3" style="margin-top: -11px;">
-            <b class="bg-white px-2">Borde del lote</b>
-          </div>
-          <div class="form-row">
-            <div class="form-group col">
-              <label class="form-label" for="fieldBorderColor">Color de borde *</label>
-              <input id="fieldBorderColor" type="text" class="form-control" value="#000000" autocomplete="off" required>
-            </div>
-            <div class="form-group col">
-              <label class="form-label">Ancho de borde *</label>
-              <input id="fieldBorderSize" type="number" class="form-control" min="1" max="10" autocomplete="off"
-                required>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button id="fmsCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-          <button id="fmsSaveBtn" type="submit" class="btn btn-success">
-            Guardar lote
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+      </div>
 
-  <div class="modal fade" id="deleteFieldModal" data-backdrop="static">
-    <div class="modal-dialog">
-      <form id="deleteFieldForm" class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Eliminar lote</h5>
-        </div>
-        <div class="modal-body py-4">
-          <div class="d-flex align-items-center">
-            <div class="far fa-trash-alt display-3 text-danger"></div>
-            <div class="ml-3">
-              <div class="text-large">¿Está seguro de eliminar el lote?</div>
-              <div class="text-big ml-1"><b id="deleteFieldName"></b></div>
-              <div class="text-danger ml-1 mt-2">¡Esta acción no puede ser revertida!</div>
+      <div class="modal fade" id="deleteFieldModal" data-backdrop="static">
+        <div class="modal-dialog">
+          <form id="deleteFieldForm" class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Eliminar lote</h5>
             </div>
-          </div>
+            <div class="modal-body py-4">
+              <div class="d-flex align-items-center">
+                <div class="far fa-trash-alt display-3 text-danger"></div>
+                <div class="ml-3">
+                  <div class="text-large">¿Está seguro de eliminar el lote?</div>
+                  <div class="text-big ml-1"><b id="deleteFieldName"></b></div>
+                  <div class="text-danger ml-1 mt-2">¡Esta acción no puede ser revertida!</div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button id="fmdCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+              <button id="fmdDeleteBtn" type="submit" class="btn btn-danger">
+                Eliminar lote
+              </button>
+            </div>
+          </form>
         </div>
-        <div class="modal-footer">
-          <button id="fmdCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-          <button id="fmdDeleteBtn" type="submit" class="btn btn-danger">
-            Eliminar lote
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+      </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/ol@v9.1.0/dist/ol.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
-  <script src="vendor/libs/popper/popper.js"></script>
-  <script src="vendor/js/bootstrap.js"></script>
-  <script src="vendor/libs/select2/select2.js"></script>
-  <script src="vendor/libs/minicolors/minicolors.js"></script>
-  <script src="vendor/libs/toastr/toastr.js"></script>
-  <script src="vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-  <script src="js/common.js"></script>
-  <script src="js/fields.js"></script>
-  <script src="js/map.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/ol@v9.1.0/dist/ol.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
+      <script src="vendor/libs/popper/popper.js"></script>
+      <script src="vendor/js/bootstrap.js"></script>
+      <script src="vendor/libs/select2/select2.js"></script>
+      <script src="vendor/libs/minicolors/minicolors.js"></script>
+      <script src="vendor/libs/toastr/toastr.js"></script>
+      <script src="vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+      <script src="js/common.js"></script>
+      <script src="js/fields.js"></script>
+      <script src="js/map.js"></script>
 </body>
 
 </html>
