--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,7 +45,7 @@
             <div class="chat-wrapper">
               <div class="card flex-grow-1 position-relative overflow-hidden">
                 <div class="row no-gutters h-100">
-                  <div class="chat-sidebox col py-2">
+                  <div class="chat-sidebox col py-0">
                     <div class="flex-grow-0 px-3">
                       <div class="media align-items-center">
                         <div class="media-body">
@@ -81,19 +81,16 @@
                     </div>
                     <div class="flex-grow-0 px-2">
                       <hr class="my-1">
-                      <div class="media align-items-center">
-                        <div class="w-100 p-1 dropright">
-                          <button type="button" class="btn btn-default btn-block text-left pl-2 pr-3 py-1"
+                      <ul class="list-unstyled my-2">
+                        <li class="dropright">
+                          <div class="d-inline-flex align-items-center align-middle w-100 px-2 py-1 mb-1 menu-item"
                             data-toggle="dropdown" aria-expanded="true" data-boundary="viewport">
-                            <div class="d-inline-flex align-items-center align-middle w-100">
-                              <img src="https://img.freepik.com/free-vector/man-profile-cartoon_18591-58482.jpg" alt=""
-                                class="d-block ui-w-40 rounded-circle">
-                              <span class="px-1 flex-grow-1 text-truncate">[[${principal.name}]]</span>
-                              <i class="fas fa-angle-right d-block"></i>
-                            </div>
-                          </button>
+                            <img th:src="@{/img/profile-img.png}" alt="" class="d-block ui-w-40 rounded-circle">
+                            <span class="px-1 flex-grow-1 text-truncate principal-name">[[${principal.name}]]</span>
+                            <i class="fas fa-angle-right d-block"></i>
+                          </div>
                           <div class="dropdown-menu dropdown-menu-right">
-                            <a href="javascript:void(0)" class="dropdown-item">
+                            <a th:href="@{/settings}" class="dropdown-item">
                               <i class="fas fa-user-cog"></i> &nbsp; Configuración</a>
                             <div class="dropdown-divider"></div>
                             <form action="#" th:action="@{/logout}" method="post">
@@ -102,8 +99,8 @@
                               </button>
                             </form>
                           </div>
-                        </div>
-                      </div>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                   <div class="d-flex col flex-column">
@@ -131,7 +128,7 @@
                               <span class="fas fa-ruler-horizontal"></span>
                             </button>
                             <button id="measureAreaBtn" type="button" measure="Polygon" title="Medir área"
-                              class="btn btn-sm icon-btn btn-outline-success map-tool-item rounded-bottom">
+                              class="btn btn-sm icon-btn btn-outline-success map-tool-item rounded-bottom d-none">
                               <span class="fas fa-draw-polygon"></span>
                             </button>
                           </div>
