--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -107,7 +107,19 @@
                     <div class="flex-grow-1 position-relative">
                       <div class="w-100 h-100">
                         <div id="map"></div>
-
+                        <div class="mb-3"
+                          style="position:absolute; top: 12px; left: 50%; transform: translateX(-50%); z-index: 1; ">
+                          <div data-toggle="dropdown" aria-expanded="true">
+                            <div class="rounded-pill text-center text-white px-4 pt-2 pb-1 d-flex menu-btn">
+                              <!-- <i class="ion ion-md-checkmark"></i> -->
+                              <h6 class="my-0 p-0">Ver Índice</h6>
+                            </div>
+                          </div>
+                          <div class="dropdown-menu">
+                            <a href="javascript:void(0)" class="dropdown-item indice" th:attr="indice=${indice.id}"
+                              th:each="indice : ${indices}">[[${indice.name}]]</a>
+                          </div>
+                        </div>
                         <div id="mapTools" class="mr-3"
                           style="position: fixed; top: 50%; right: 0; transform: translateY(-50%);">
                           <div class="bg-white rounded border text-white d-flex flex-column" style="gap: 0;">
@@ -147,11 +159,10 @@
                         </div>
 
                         <div id="editFieldGeometryTools" class="mb-3"
-                          style="position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); display: none;">
-                          <div class="rounded-pill bg-dark text-center text-white d-flex flex-row p-3">
-                            <button id="cancelFieldGeometry"
-                              class="btn rounded-pill btn-secondary px-5">Cancelar</button>
-                            <button id="saveFieldGeometry" class="btn rounded-pill btn-success px-5">Guardar</button>
+                          style="position:absolute; bottom: 5px; left: 50%; transform: translateX(-50%); z-index: 1; display: none;">
+                          <div class="rounded bg-dark text-center text-white d-flex flex-row p-2">
+                            <button id="cancelFieldGeometry" class="btn rounded btn-secondary px-5">Cancelar</button>
+                            <button id="saveFieldGeometry" class="btn rounded btn-success px-5">Guardar</button>
                           </div>
                         </div>
                       </div>
@@ -260,12 +271,14 @@
       <script src="vendor/libs/popper/popper.js"></script>
       <script src="vendor/js/bootstrap.js"></script>
       <script src="vendor/libs/select2/select2.js"></script>
+      <script src="vendor/libs/select2/select2.js"></script>
       <script src="vendor/libs/minicolors/minicolors.js"></script>
       <script src="vendor/libs/toastr/toastr.js"></script>
       <script src="vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
       <script src="js/common.js"></script>
       <script src="js/fields.js"></script>
       <script src="js/measure.js"></script>
+      <script src="js/indices.js"></script>
       <script src="js/map.js"></script>
 </body>
 
