--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,6 +34,10 @@
   <link rel="stylesheet" href="vendor/css/pages/chat.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.1.0/ol.css">
   <link rel="stylesheet" href="css/home.css">
+  <script th:inline="javascript">
+    window.App = {};
+    window.App.ImagesUrl = /*[[${imagesUrl}]]*/ null;
+  </script>
 </head>
 
 <body>
@@ -107,8 +111,7 @@
                     <div class="flex-grow-1 position-relative">
                       <div class="w-100 h-100">
                         <div id="map"></div>
-                        <div class="mb-3"
-                          style="position:absolute; top: 15px; left: 15px; z-index: 1; ">
+                        <div class="mb-3" style="position:absolute; top: 15px; left: 15px; z-index: 1; ">
                           <div data-toggle="dropdown" aria-expanded="true">
                             <div class="rounded-pill text-center text-white px-4 pt-2 pb-1 d-flex menu-btn">
                               <h6 id="selectedIndiceBtn" indice="" class="my-0 p-0">Ver Índice</h6>
@@ -267,7 +270,7 @@
         </div>
       </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/ol@v9.1.0/dist/ol.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.2/dist/ol.js"></script>
       <script src="https://viglino.github.io/ol-ext/dist/ol-ext.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
       <script src="vendor/libs/popper/popper.js"></script>
