Obtener imagen de lote cuando cambia el indice

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -114,8 +114,8 @@
 
                         <div class="mb-3" style="position:absolute; top: 15px; left: 15px; z-index: 1; ">
                           <div data-toggle="dropdown" aria-expanded="true">
-                            <div class="rounded-pill text-center text-white px-4 pt-2 pb-1 d-flex menu-btn">
-                              <h6 id="selectedIndiceBtn" indice="" class="my-0 p-0">Ver Índice</h6>
+                            <div class="rounded-pill text-center text-white px-4 py-2 d-flex menu-btn">
+                              <h6 id="selectedIndiceBtn" indice="" class="my-0 p-0" style="line-height: 1;">Ver Índice</h6>
                             </div>
                           </div>
                           <div class="dropdown-menu">
