Mostrar calendario e indices cuando hay fechas

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -112,7 +112,7 @@
                       <div class="w-100 h-100">
                         <div id="map"></div>
 
-                        <div class="mb-3" style="position:absolute; top: 15px; left: 15px; z-index: 1; ">
+                        <div id="indicesListContainer" class="mb-3" style="position:absolute; top: 15px; left: 15px; z-index: 1; display: none;">
                           <div data-toggle="dropdown" aria-expanded="true">
                             <div class="rounded-pill text-center text-white px-4 py-2 d-flex menu-btn">
                               <h6 id="selectedIndiceBtn" indice="" class="my-0 p-0" style="line-height: 1;">Ver Índice</h6>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div id="calendarImagesContainer" class="mb-3"
-                          style="position:absolute; top: 15px; right: 15px; z-index: 1;">
+                          style="position:absolute; top: 15px; right: 15px; z-index: 1; display: none;">
                           <div class="rounded p-2">
                             <div id="calendarImages" class="rounded bg-white"></div>
                           </div>
