Se agrega tooltip a lote

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -110,7 +110,9 @@
                   <div class="d-flex col flex-column">
                     <div class="flex-grow-1 position-relative">
                       <div class="w-100 h-100">
-                        <div id="map"></div>
+                        <div id="map">
+                          <div id="tooltip" class="tooltip"></div>
+                        </div>
 
                         <div id="indicesListContainer" class="mb-3" style="position:absolute; top: 15px; left: 15px; z-index: 1; display: none;">
                           <div data-toggle="dropdown" aria-expanded="true">
