--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -31,7 +31,7 @@ body,
   height: 0.5rem;
 }
 
-/* .tooltip {
+.tooltip {
   position: relative;
   padding: 3px;
   background: rgba(0, 0, 0, .7);
@@ -39,7 +39,7 @@ body,
   opacity: 1;
   white-space: nowrap;
   font: 10pt sans-serif;
-} */
+}
 
 .d-flex {
   gap: 0.5rem;
