--- a/src/main/resources/templates/settings/sidebar.html
+++ b/src/main/resources/templates/settings/sidebar.html
@@ -50,7 +50,7 @@
         <li class="dropright">
           <div class="d-inline-flex align-items-center align-middle w-100 px-2 py-1 mb-1 menu-item"
             data-toggle="dropdown" aria-expanded="true" data-boundary="viewport">
-            <img th:src="@{/img/profile-img.png}" alt="avatar" class="d-block ui-w-40 rounded-circle">
+            <img th:src="${principal.avatar != null ? principal.avatar : '/img/profile-img.png'}" alt="" class="userAvatarImg d-block ui-w-40 rounded-circle">
             <span class="pl-1 pr-3 flex-grow-1 text-truncate principal-name">[[${principal.name}]]</span>
             <i class="fas fa-angle-right d-block"></i>
           </div>
