Se agrega estilo de indice y se mejora tooltip

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -121,7 +121,8 @@
                     <div class="flex-grow-1 position-relative">
                       <div class="w-100 h-100">
                         <div id="map">
-                          <div id="tooltip" class="tooltip"></div>
+                        </div>
+                        <div id="tooltip" class="ol-popup">
                         </div>
 
                         <div id="indicesListContainer" class="mb-3"
