--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -31,16 +31,6 @@ body,
   height: 0.5rem;
 }
 
-.tooltip {
-  position: relative;
-  padding: 3px;
-  background: rgba(0, 0, 0, .7);
-  color: white;
-  opacity: 1;
-  white-space: nowrap;
-  font: 10pt sans-serif;
-}
-
 .d-flex {
   gap: 0.5rem;
 }
@@ -98,7 +88,6 @@ body,
   color: white;
 }
 
-
 .search-btn-input-container {
   position: relative;
   display: flex;
@@ -107,7 +96,8 @@ body,
 
 .search-btn-input-container .search-btn-form-control {
   width: 100%;
-  padding-right: 30px; /* Make space for the close button */
+  padding-right: 30px;
+  /* Make space for the close button */
 }
 
 .search-btn-input-container .search-btn-close {
@@ -118,4 +108,41 @@ body,
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+
+.ol-popup {
+  position: absolute;
+  text-align: center;
+  background: rgba(0, 0, 0, .7);
+  color: white;
+  padding: 5px;
+  border-radius: 6px;
+  bottom: 13px;
+  left: -57px;
+  width: 100px;
+}
+
+.ol-popup:after,
+.ol-popup:before {
+  top: 100%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.ol-popup:after {
+  border-top-color: rgba(0, 0, 0, .7);
+  border-width: 10px;
+  left: 48px;
+  margin-left: -10px;
+}
+
+.ol-popup:before {
+  border-top-color: rgba(0, 0, 0, .7);
+  border-width: 11px;
+  left: 48px;
+  margin-left: -11px;
 }
