Se agrega herramienta de medición de áreas

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -169,7 +169,7 @@
                               <span class="fas fa-ruler-horizontal"></span>
                             </button>
                             <button id="measureAreaBtn" type="button" measure="Polygon" title="Medir área"
-                              class="btn btn-sm icon-btn btn-outline-success map-tool-item rounded-bottom d-none">
+                              class="btn btn-sm icon-btn btn-outline-success map-tool-item rounded-bottom">
                               <span class="fas fa-draw-polygon"></span>
                             </button>
                           </div>
