--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -117,13 +117,12 @@ body,
   color: white;
   padding: 5px;
   border-radius: 6px;
-  bottom: 13px;
-  left: -57px;
-  width: 100px;
+  bottom: 9px;
+  left: -50px;
+  width: 85px;
 }
 
-.ol-popup:after,
-.ol-popup:before {
+.ol-popup:after {
   top: 100%;
   border: solid transparent;
   content: " ";
@@ -135,14 +134,16 @@ body,
 
 .ol-popup:after {
   border-top-color: rgba(0, 0, 0, .7);
-  border-width: 10px;
-  left: 48px;
-  margin-left: -10px;
+  border-width: 8px;
+  left: 32px;
 }
 
-.ol-popup:before {
-  border-top-color: rgba(0, 0, 0, .7);
-  border-width: 11px;
-  left: 48px;
-  margin-left: -11px;
+.indice-statistics-table {
+  border-collapse: separate;
+  border-spacing: 0 2px;
+}
+
+.indice-legend-colors {
+  width: 15px;
+  /* background: linear-gradient(0deg, #FF0000 0%, #FFFFFF 50%, #008000 100%); */
 }
