--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -215,7 +215,7 @@
                                       <div class="flex-grow-1 indice-legend-colors"></div>
                                       <span id="legendIndiceMin">...</span>
                                     </div>
-                                    <table class="ml-3 indice-statistics-table">
+                                    <table class="ml-3 indice-statistics-table font-weight-light">
                                       <tr>
                                         <td><span>Máximo:</span>&nbsp;</td>
                                         <td><span id="legendStatisticsMax">...</span></td>
@@ -243,10 +243,10 @@
                         <div id="loadingContainer" class="mb-3"
                           style="position:absolute; bottom: 0px; left: 50%; transform: translateX(-50%); z-index: 1; display: none;">
                           <div class="rounded bg-dark text-center text-white d-flex flex-row p-2 align-items-center">
-                            <h5 class="m-0">Procesando</h5>
+                            <h5 class="m-0 font-weight-light">Procesando</h5>
                             <span class="d-flex align-items-center">
                               <div class="spinner-grow spinner-grow-xs text-primary" role="status">
-                                <span class="sr-only">Loading...</span>
+                                <span class="sr-only ">Loading...</span>
                               </div>
                               <div class="spinner-grow spinner-grow-xs text-secondary" role="status">
                                 <span class="sr-only">Loading...</span>
@@ -255,6 +255,23 @@
                                 <span class="sr-only">Loading...</span>
                               </div>
                             </span>
+                          </div>
+                        </div>
+
+                        <div id="dayWeatherContainer" class="mb-3"
+                          style="position:absolute; bottom: 0px; right: 15px; z-index: 1; cursor: pointer;">
+                          <div class="rounded bg-dark text-white p-2 align-items-center">
+                            <div class="mb-2" style="width: 100px;">
+                              <h6 class="m-0 p-0 text-truncate font-weight-light">Dolores Hidalgo Cunaasasdasd sd s d </h6>
+                              <p class="m-0 text-truncate small font-weight-light">México</p>
+                            </div>
+                            <div class="text-center d-flex justify-content-center align-items-center" style="gap: 0;">
+                              <div class="fas fa-sun text-xlarge text-warning mr-2 font-weight-light"></div>
+                              <h3 class="m-0 font-weight-light">30 <sup>o</sup>C</h3>
+                            </div>
+                            <div class="text-center">
+                              <p class="m-0 mt-2 font-weight-light">Lun. 10</p>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -357,6 +374,22 @@
         </div>
       </div>
 
+      <div class="modal fade" id="weatherModal" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">
+                Condiciones meteorológicas
+              </h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">×</button>
+            </div>
+            <div class="modal-body py-4">
+              <h1>Contenido</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.2/dist/ol.js"></script>
       <script src="https://viglino.github.io/ol-ext/dist/ol-ext.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/geotiff@2.1.3/dist-browser/geotiff.min.js"></script>
@@ -376,6 +409,7 @@
       <script src="js/indices.js"></script>
       <script src="js/notifications.js"></script>
       <script src="js/calendar.js"></script>
+      <script src="js/weather.js"></script>
 </body>
 
 </html>
